# askmeinsurance

./: .dockerignore  .gitignore  CLAUDE.md  EXPERIMENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  API_CONTRACT.md  Dockerfile  example.env  pyproject.toml  sample.env
backend/app/: main.py
backend/app/agent/: config.yaml  graph.py
backend/app/agent/agents/: general_agent.py  main_agent.py
backend/app/agent/prompts/: prompts.py
backend/app/api/v1/: auth.py  (+3 more)
backend/app/core/: config.py  guardrails.py  langfuse.py  security.py  sse.py
backend/app/dependencies/: auth.py
backend/app/schemas/: chat.py  common.py  conversation.py  form.py
backend/app/services/: auth_service.py  chat_service.py  conversation_service.py  form_service.py  langgraph_service.py  message_service.py  supabase_client.py  user_limits_service.py
backend/app/src/: agent_config.yaml  graph.py
backend/askmeinsurance_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 001_init.sql  002_cleanup.sql  003_user_limits.sql  admin_set_user_limits.sql
backend/tests/: test_auth_dev_login.py  test_auth_verification.py  test_conversation_messages.py  test_error_envelope.py  test_eval_chatbot_invoker.py  test_general_agent_execution_results_prompt.py  test_guardrails_service.py  test_llm_service.py  test_main_agent_router.py  test_query_textbook.py  test_sse_form_contract.py  test_workflow_prompt_format.py
document_ingestion/ingestion_pipeline/: .gitignore  README.md  cleanup_output_by_file.py  combine_document_metadata.py  example.env  pyproject.toml  run_pipeline.py  step1_mineru_convert.py  step2_chunk_content.py  step3_table_enrich.py  step4_add_context.py  step5_one_page_summary.py  step6_add_document_metadata.py  step7_embed_and_upsert.py  utils.py
evals/: .env  .env.example  .gitignore  README.md  pyproject.toml  regenerate_log.py  run_evals.py
evals/01_create_reference_dataset/manual_evals/: find_chunks.py  manual_data.json
evals/01_create_reference_dataset/prodsummary_evals/: create_prod_summary_evals.py
evals/01_create_reference_dataset/textbook_evals/: evaluate_chunks.py  evaluation_results.json  generate_golden.py  generated_goldens.json  input_chunks.json  sample_input.json  search_similar_chunks.py  similar.json
evals/02_run_evals/: chatbot_invoker.py  dataset_loader.py  langfuse_reporter.py  metrics.py  run_evals.py
evals/02_run_evals/.deepeval/: .deepeval_telemetry.txt
evals/dataset/: manual_data.json
evals/eval_utils/: bootstrap.py  chatbot_invoker.py  config.py  criteria.py  dataset_loader.py  langfuse_reporter.py  metrics.py  models.py  reporting.py  retrieval.py  runner.py
evals/naive_rag/: naive_rag_demo.py
evals/tests/: test_config.py  test_dataset_loader.py  test_naive_rag_runner.py  test_reporting.py  test_retrieval.py  test_runner.py
(+106 files in other folders)
