[project]
name = "askmeinsurance-backend"
version = "0.1.0"
description = "FastAPI backend skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=1.3.1",
  "langchain-openai>=0.3.0",
  "langfuse>=2.0.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "supabase>=2.4.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
