[project]
name = "askmeinsurance-evals"
version = "0.1.0"
description = "Evaluation dataset creation tools for askmeinsurance"
readme = "README.md"
authors = [
    { name = "potassiumflouride", email = "potassiumflouride@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "qdrant-client>=1.12",
    "python-dotenv>=1.0",
    "deepeval>=1.0",
    "langchain-google-genai>=4.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["01_create_reference_dataset"]

[tool.hatch.build.targets.sdist]
include = [
    "01_create_reference_dataset",
    "README.md",
    "pyproject.toml",
]
